lab9/tests/invalid/wrongPrice.js
module.exports = {
    "category_id": "20",
    "title": "watches",
    "content": "New content",
    "price": "text",
    "old_price": "50",
    "status": "0",
    "keywords": "New keywords",
    "description": "New description",
    "hit": "0"
}